# aws-cost-reporter

./: .gitignore  Dockerfile  LICENSE  README.md  cost_reporter.py  lambda_handler.py  pyproject.toml
scripts/: build.sh  deploy.sh
tofu/: .terraform.lock.hcl  lambda.tf  main.tf  outputs.tf  storage.tf
