[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aws-cost-reporter"
version = "0.1.0"
description = "Daily AWS cost report across an AWS Organization"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.34",
    "polars>=1.0",
    "matplotlib>=3.8",
    "seaborn>=0.13",
]

[tool.hatch.build.targets.wheel]
include = [
    "cost_reporter.py",
    "lambda_handler.py",
]
